style: change welcome text ✏️

--- a/languages/en/main.json
+++ b/languages/en/main.json
@@ -7,7 +7,7 @@
 		},
 		"Sections": {
 			"Main": {
-				"Name": "Hi there! I'm ",
+				"Name": "Hi 👋! I'm ",
 				"Carousel": "Database Administrator,Backend Developer,Software Engineer,DevOps Engineer,Frontend Developer"
 			}
 		}
