--- a/languages/es/main.json
+++ b/languages/es/main.json
@@ -7,7 +7,7 @@
 		},
 		"Sections": {
 			"Main": {
-				"Name": "¡Hola! Soy ",
+				"Name": "¡Hola 👋! Soy ",
 				"Carousel": "Administrador de Bases de Datos,Desarrollador Backend,Ingeniero de Software,Ingeniero DevOps,Desarrollador Frontend"
 			}
 		}
