--- a/languages/es/main.json
+++ b/languages/es/main.json
@@ -2,7 +2,7 @@
 	"Main": {
 		"Metadata": {
 			"title": "Jaro.c",
-			"description": "Bienvenido al portafolio de Jaro.c. Soy un desarrollador web y backend apasionado con experiencia en Go, Next.js, Node.js, Python y Express. Desde 2024, me he expandido al desarrollo web, trabajando en proyectos freelance de scraping web y mensajería automatizada. Mis habilidades también incluyen MongoDB, PostgreSQL, MySQL, Git, JavaScript, HTML y TailwindCSS. Explora mis proyectos para ver soluciones innovadoras en acción.",
+			"description": "Bienvenido al portafolio de Jaro.c. Soy un apasionado desarrollador web y backend con experiencia en Go, Next.js, Node.js, Python y Express. He trabajado en proyectos freelance que incluyen web scraping y mensajería automatizada. Desde 2024, he expandido mis habilidades en desarrollo frontend y sigo en continuo aprendizaje de nuevas tecnologías. También manejo MongoDB, PostgreSQL, MySQL, Git, JavaScript, HTML y TailwindCSS. Explora mis proyectos para ver soluciones innovadoras en acción.",
 			"keywords": "portafolio,Jaro.c,desarrollador web,desarrollador backend,Next.js,Go,Node.js,Python,Express"
 		},
 		"Sections": {
@@ -14,6 +14,16 @@
 					"On": "Disponible para trabajar",
 					"Off": "No disponible"
 				}
+			},
+			"About": {
+				"title": "Sobre mí",
+				"description": "Soy <name>Alejandro Rodriguez</name>, pero puedes llamarme <name>Jaro.c</name>, un nombre derivado de mis iniciales. Mi pasión por la tecnología comenzó con Python, que despertó mi amor por el desarrollo backend. Desde entonces, he explorado y dominado diversas áreas del desarrollo web, siempre buscando nuevas tecnologías y lenguajes que enriquezcan mis habilidades.\n\nDisfruto tanto del desarrollo backend como del frontend, así como de la gestión de servidores y bases de datos. Esta versatilidad me permite abordar proyectos de manera integral, asegurando que cada aspecto del desarrollo esté cuidadosamente gestionado y optimizado. Desde inicios de 2024, decidí expandir mi horizonte para incluir el desarrollo frontend y he incorporado herramientas como Next.js y lenguajes de backend interesantes como Go a mi repertorio.\n\nHe trabajado en proyectos freelance que van desde el web scraping hasta la mensajería automatizada, siempre buscando soluciones innovadoras y eficientes. Me encanta enfrentar nuevos desafíos y aprender constantemente, lo que me permite adaptarme rápidamente a las necesidades cambiantes del desarrollo tecnológico."
+			},
+			"Skills": {
+				"title": ""
+			},
+			"Contact": {
+				"title": ""
 			}
 		}
 	}
